<resources>
    <string name="app_name">FCISquare</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="username">Username or Email</string>
    <string name="password">Password</string>
    <string name="noAccount">Don\'t have an account? Create one</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="signup">Sign Up</string>
    <string name="alreadyMember">Already have an account? Log in</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
</resources>
