<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/blackShade"
    tools:context="team.fcisquare.Login">

    <ImageView
        android:id="@+id/logoMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/square_logo"/>
    <EditText
        android:id="@+id/loginBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="20sp"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="5sp"
        android:textColor="@color/pureWhite"
        android:textColorHint="@color/deadGrey"
        android:textSize="20sp"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/passBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBox"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:drawableLeft="@drawable/pass"
        android:drawablePadding="5sp"
        android:textColor="@color/pureWhite"
        android:textColorHint="@color/deadGrey"
        android:textSize="20sp"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:textAllCaps="false"
        android:background="@color/darkShade"
        android:text="@string/login"
        android:textColor="@color/pureWhite"
        android:textSize="20sp"
        android:onClick="onClickLogin"
        />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5sp"
        android:text="@string/noAccount"
        android:textColor="@color/pureWhite"
        android:textSize="20sp"
        android:onClick="onClickSignUp"/>
</RelativeLayout>
